--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
+        "slugify": "^1.6.6",
         "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
